syntax = "proto3";
option csharp_namespace = "Streckenbuch.Shared.Services";
package Betriebspunkte;

import "google/protobuf/empty.proto";
import "Types/guid.proto";
import "Types/location.proto";

service BetriebspunkteService {
	rpc ListAllBetriebspunkte (google.protobuf.Empty) returns (ListBetriebspunkteAnswer);
	rpc ListBetriebspunkteByStreckenKonfiguration (ListBetriebspunkteByStreckenKonfigurationRequest) returns (ListBetriebspunkteAnswer);
	rpc CreateBetriebspunkt (CreateBetriebspunktReqeust) returns (google.protobuf.Empty);
}

message ListBetriebspunkteByStreckenKonfigurationRequest {
	Types.GuidProto streckenKonfigurationId = 1;
}

message CreateBetriebspunktReqeust {
	string name = 1;
	optional string kommentar = 2;
	Types.LocationProto location = 3;
	int32 typ = 4;
}

message ListBetriebspunkteAnswer {
	repeated BetriebspunktProto betriebspunkte = 1;
}

message BetriebspunktProto {
	Types.GuidProto id = 1;
	string name = 2;
	optional string kommentar = 3;
	Types.LocationProto location = 4;
}